<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/options"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:layout_alignParentBottom="true"
    android:focusable="false"
	android:focusableInTouchMode="false" >

    <Button
        android:id="@+id/open"
        android:layout_width="wrap_content"
        android:layout_height="32dip"
        android:layout_alignParentRight="true"
        android:text="@string/open_button"
        android:textSize="12sp" 
        android:layout_gravity="bottom" />

    <Button
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="32dip"
        android:layout_toLeftOf="@id/open"
        android:text="@string/delete_button"
        android:textSize="12sp" 
        android:layout_gravity="bottom" />

    <Button
        android:id="@+id/rename"
        android:layout_width="wrap_content"
        android:layout_height="32dip"
        android:layout_toLeftOf="@id/delete"
        android:text="@string/rename_button"
        android:textSize="12sp" 
        android:layout_gravity="bottom" />

</RelativeLayout>