<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/filerow"
    android:layout_width="fill_parent"
    android:layout_height="52dip"
    android:clickable="true"
    android:padding="6dip" 
    android:focusable="false"
	android:focusableInTouchMode="false" >

    <ImageView
        android:id="@+id/icon"
        android:layout_width="60dip"
        android:layout_height="52dip"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="6dip"
        android:contentDescription="@string/image_title"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_launcher" 
        android:focusable="false"
		android:focusableInTouchMode="false" />

    <TextView
        android:id="@+id/toptext"
        android:layout_width="fill_parent"
        android:layout_height="26dip"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@id/icon"
        android:text="@string/placeholder_title"
        android:focusable="false"
		android:focusableInTouchMode="false" />

    <TextView
        android:id="@+id/bottomtext"
        android:layout_width="fill_parent"
        android:layout_height="26dip"
        android:layout_toRightOf="@id/icon"
        android:layout_below="@id/toptext"
        android:ellipsize="marquee"
        android:gravity="left|center_vertical"
        android:singleLine="true"
        android:text="@string/placeholder_desc" 
        android:focusable="false"
		android:focusableInTouchMode="false" />
    
    <TextView
        android:id="@+id/date"
        android:layout_width="64dip"
        android:layout_height="24dip"
        android:layout_alignBaseline="@id/bottomtext"
        android:layout_alignParentRight="true"
        android:layout_below="@id/toptext"
        android:ellipsize="marquee"
        android:gravity="right"
        android:singleLine="true"
        android:text="@string/placeholder_date" 
        android:focusable="false"
		android:focusableInTouchMode="false" />

</RelativeLayout>